--- a/naive_test2.ipynb
+++ b/naive_test2.ipynb
@@ -1,12 +1,7 @@
 {
  "cells": [
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-19T01:55:37.776176Z",
-     "start_time": "2025-02-19T01:55:37.771157Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import torch\n",
@@ -39,15 +34,10 @@
    ],
    "id": "d0e3208e1c9b0d2c",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-19T01:55:37.794995Z",
-     "start_time": "2025-02-19T01:55:37.788146Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import torch\n",
@@ -91,61 +81,56 @@
     "    def zero_latent_space(self):\n",
     "        self.latent_space.zero_()\n",
     "\n",
-    "    def encode_sequence(self, sequence: torch.Tensor) -> torch.Tensor:\n",
+    "    def encode_sequence(self, latent_space: torch.Tensor, sequence: torch.Tensor) -> torch.Tensor:\n",
     "        \"\"\" in size [seq_len], out size [self.latent_size] \"\"\"\n",
     "        tokens = self.embedding(sequence)\n",
     "        seq_len = tokens.size(0)\n",
-    "        temp_latent = self.latent_space.clone()\n",
     "\n",
     "        for index in range(seq_len):\n",
     "            curr_tok = tokens[index]\n",
-    "            temp_seq = torch.stack([curr_tok, temp_latent])\n",
-    "            temp_seq = temp_seq\n",
+    "            # latent_copy = self.latent_space\n",
+    "            temp_seq = torch.stack([curr_tok, latent_space])\n",
     "            for i in range(self.encode_depth):\n",
     "                attended_seq, _ = self.encoder_mha_blocks[i](temp_seq, temp_seq, temp_seq)\n",
     "                attended_seq = self.encoder_projection_layers[i](attended_seq)\n",
     "                attended_seq = self.encoder_mlp_layers[i](attended_seq)\n",
     "                temp_seq = temp_seq + attended_seq\n",
     "                temp_seq = self.normalize_encoder_latent(temp_seq)\n",
-    "            temp_latent = temp_seq[1]\n",
-    "        return temp_latent\n",
+    "            latent_space = temp_seq[1]\n",
+    "            # self.latent_space = self.latent_space + temp_seq[1]\n",
+    "            # self.latent_space = self.normalize_latent(self.latent_space)\n",
+    "        return latent_space\n",
     "\n",
-    "    def decode_latent(self, latent) -> torch.Tensor:\n",
-    "        out = self.decoder(latent)\n",
+    "    def decode_latent(self, latent_space) -> torch.Tensor:\n",
+    "        out = self.decoder(latent_space)\n",
     "        return out\n",
     "\n",
-    "    def inference(self, in_sequence: torch.Tensor, max_len, end_at: str = \"</model>\"):\n",
-    "        current_length = 0\n",
-    "        self.zero_latent_space()\n",
-    "        temp_latent = self.encode_sequence(in_sequence)\n",
-    "        while current_length < max_len:\n",
-    "            out_logits = self.decode_latent(temp_latent)\n",
-    "            out_index = torch.argmax(out_logits, dim=0)\n",
-    "            human_letter = tokenizer.reverse_vocabulary_dictionary[out_index.item()]\n",
-    "            print(f\"{human_letter}\", end=\"\")\n",
-    "            temp_latent = self.encode_sequence(out_index.unsqueeze(0))\n",
-    "            if human_letter == end_at:\n",
+    "    def inference(self, latent_space: torch.Tensor, in_sequence: torch.Tensor, max_len, end_at: str) -> torch.Tensor:\n",
+    "        out_sequence = []\n",
+    "        # self.latent_space = torch.zeros(self.latent_size)\n",
+    "        self.encode_sequence(latent_space=latent_space, sequence=in_sequence)\n",
+    "        while len(out_sequence) < max_len:\n",
+    "            predictions = self.decode_latent(latent_space=self.latent_space)\n",
+    "            prediction = torch.argmax(predictions)\n",
+    "            out_sequence.append(tokenizer.reverse_vocabulary_dictionary[prediction.item()])\n",
+    "            print(out_sequence[-1], end=\"\")\n",
+    "            if out_sequence[-1] == end_at:\n",
     "                break\n",
-    "            else:\n",
-    "                current_length += 1\n",
+    "            self.encode_sequence(latent_space=latent_space, sequence=prediction.unsqueeze(0))\n",
+    "        return out_sequence\n",
     "\n",
     "    def forward(self, tokens: torch.Tensor) -> torch.Tensor:\n",
-    "        self.zero_latent_space()\n",
-    "        attended_latent = self.encode_sequence(tokens)\n",
-    "        x = self.decode_latent(attended_latent)\n",
-    "        return x"
+    "        latent = torch.zeros(self.latent_size)\n",
+    "        latent = self.encode_sequence(latent, tokens)\n",
+    "        output = self.decode_latent(latent)\n",
+    "        return output"
    ],
    "id": "b354178387c73ea1",
    "outputs": [],
-   "execution_count": 68
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-19T01:55:37.837931Z",
-     "start_time": "2025-02-19T01:55:37.832020Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import torch\n",
@@ -159,7 +144,7 @@
     "unfoo = tokenizer.untokenize(foo)\n",
     "print(unfoo)\n",
     "model = Model(latent_size=128, vocabulary_size=len(tokenizer.vocabulary_dictionary), num_attention_heads=4,\n",
-    "              encode_depth=5)\n",
+    "              encode_depth=10)\n",
     "\n",
     "# print(model.latent_space)\n",
     "# temp_lat = model.encode_sequence(foo)\n",
@@ -171,25 +156,11 @@
     "# print(torch.softmax(grr, dim=0))"
    ],
    "id": "2294db9e610d120",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([91, 43, 44, 52, 52, 34, 69, 89, 34, 71, 52, 64, 92])\n",
-      "['<model>', 'h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd', '</model>']\n"
-     ]
-    }
-   ],
-   "execution_count": 69
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-19T01:55:37.882410Z",
-     "start_time": "2025-02-19T01:55:37.878230Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "texts = [\n",
@@ -246,17 +217,10 @@
    ],
    "id": "80e343fcec05191c",
    "outputs": [],
-   "execution_count": 70
+   "execution_count": null
   },
   {
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
-    "ExecuteTime": {
-     "start_time": "2025-02-19T01:55:37.924350Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import torch\n",
@@ -277,35 +241,26 @@
     "loss_avg = 0\n",
     "\n",
     "for epoch in range(EPOCHS):\n",
-    "    random_text = random.choice(training_texts)\n",
-    "    rand_index = random.randint(1, len(random_text) - 1)\n",
-    "    train_text = random_text[:rand_index]\n",
-    "    label_text = random_text[rand_index]\n",
+    "    random.shuffle(training_texts)\n",
+    "    for text in training_texts:\n",
+    "        rand_index = random.randint(1, len(text) - 1)\n",
+    "        train_text = text[:rand_index]\n",
+    "        label_text = text[rand_index]\n",
+    "        raw_logits = model(train_text)\n",
+    "        loss = loss_fn(raw_logits, label_text)\n",
+    "        loss.backward()\n",
+    "        loss_avg += loss.item()\n",
     "\n",
-    "    raw_logits = model(train_text)\n",
-    "    loss = loss_fn(raw_logits, label_text)\n",
-    "    loss.backward()\n",
-    "\n",
-    "    loss_avg += loss.item()\n",
-    "    if (epoch + 1) % 100 == 0:\n",
-    "        loss_avg /= 100\n",
-    "        loss_hist.append(loss_avg)\n",
-    "        print(f\"E {epoch + 1:,}/{EPOCHS:,} - {((epoch + 1) / EPOCHS) * 100:.2f}% | Loss: {loss_avg:.5f}\")\n",
-    "        loss_avg = 0\n",
+    "    loss_avg /= len(training_texts)\n",
+    "    loss_hist.append(loss_avg)\n",
+    "    print(f\"E {epoch + 1:,}/{EPOCHS:,} - {((epoch + 1) / EPOCHS) * 100:.2f}% | Loss: {loss_avg:.5f}\")\n",
+    "    loss_avg = 0\n",
     "\n",
     "    optimizer.step()\n",
     "    optimizer.zero_grad()"
    ],
    "id": "10057e71be5a33ef",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "E 100/10,000 - 1.00% | Loss: 3.87265\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": null
   },
   {
@@ -332,9 +287,10 @@
    "source": [
     "import torch\n",
     "\n",
-    "txt = \"The\"\n",
+    "txt = \"The \"\n",
     "foo = tokenizer.tokenize(text=txt, pad_before=[\"<model>\"])\n",
-    "model.inference(in_sequence=foo, max_len=100, end_at=\"</model>\")"
+    "out_seq = model.inference(latent_space=model.latent_space, in_sequence=foo, max_len=100, end_at=\"</model>\")\n",
+    "print(out_seq)"
    ],
    "id": "9d7806ecf9581135",
    "outputs": [],
