made the architecture simpler and seems to work kinda better

--- a/naive_test_4.ipynb
+++ b/naive_test_4.ipynb
@@ -1,16 +1,272 @@
 {
  "cells": [
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
+   "source": [
+    "import torch\n",
+    "import random\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed_all(42)\n",
+    "random.seed(42)"
+   ],
+   "id": "72009c116e14cf3b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    ""
-   ]
+    "import torch\n",
+    "\n",
+    "\n",
+    "class Tokenizer:\n",
+    "    def __init__(self, vocabulary: str, special_tokens: list):\n",
+    "        self.special_tokens = special_tokens\n",
+    "        self.vocabulary_dictionary = {}\n",
+    "        self.reverse_vocabulary_dictionary = {}\n",
+    "        vocabulary_list = list(set(vocabulary))\n",
+    "        vocabulary_list = vocabulary_list + special_tokens\n",
+    "        for i, t in enumerate(vocabulary_list):\n",
+    "            self.vocabulary_dictionary[t] = i\n",
+    "            self.reverse_vocabulary_dictionary[i] = t\n",
+    "\n",
+    "    def tokenize(self, text: str, pad_before: list = None, pad_after: list = None) -> torch.Tensor:\n",
+    "        split_string = list(text)\n",
+    "        pad_before = [] if pad_before is None else pad_before\n",
+    "        pad_after = [] if pad_after is None else pad_after\n",
+    "        full = pad_before + split_string + pad_after\n",
+    "        out = torch.Tensor([self.vocabulary_dictionary[letter] for letter in full])\n",
+    "        out = out.long()\n",
+    "        return out\n",
+    "\n",
+    "    def untokenize(self, tensor: torch.Tensor) -> list:\n",
+    "        out_list = [self.reverse_vocabulary_dictionary[token.item()] for token in tensor]\n",
+    "        return out_list"
+   ],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "\n",
+    "class Model(nn.Module):\n",
+    "    def __init__(self,\n",
+    "                 vocabulary_length: int,\n",
+    "                 latent_size: int,\n",
+    "                 attention_depth: int,\n",
+    "                 num_heads: int):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.encode_dimension = latent_size\n",
+    "\n",
+    "        self.embedding = nn.Embedding(vocabulary_length, latent_size)\n",
+    "\n",
+    "        self.positional_encoding = nn.Embedding(2, latent_size)\n",
+    "\n",
+    "        self.attention_block = nn.MultiheadAttention(embed_dim=latent_size, num_heads=num_heads, batch_first=True)\n",
+    "        self.projection_layer = nn.Linear(in_features=latent_size, out_features=latent_size)\n",
+    "        self.mlp_layer = nn.Sequential(\n",
+    "            nn.Linear(in_features=latent_size, out_features=latent_size * 4),\n",
+    "            nn.LeakyReLU(),\n",
+    "            nn.Linear(in_features=latent_size * 4, out_features=latent_size),\n",
+    "        )\n",
+    "\n",
+    "        self.layer_norm = nn.LayerNorm(latent_size)\n",
+    "\n",
+    "        self.attention_blocks = nn.ModuleList([self.attention_block for _ in range(attention_depth)])\n",
+    "        self.projection_layers = nn.ModuleList([self.projection_layer for _ in range(attention_depth)])\n",
+    "        self.mlp_layers = nn.ModuleList([self.mlp_layer for _ in range(attention_depth)])\n",
+    "\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.Linear(in_features=latent_size, out_features=vocabulary_length),\n",
+    "        )\n",
+    "\n",
+    "    def encode_token(self, latent: torch.Tensor, token: torch.Tensor) -> tuple:\n",
+    "        sequence = torch.stack([latent, token], dim=0)\n",
+    "        for i, block in enumerate(self.attention_blocks):\n",
+    "            seq, _ = self.attention_blocks[i](sequence, sequence, sequence)\n",
+    "            seq = self.projection_layers[i](sequence)\n",
+    "            sequence = self.layer_norm(sequence + seq)\n",
+    "            seq = self.mlp_layers[i](sequence)\n",
+    "            sequence = self.layer_norm(sequence + seq)\n",
+    "        attended_latent, attended_token = sequence[0], sequence[1]\n",
+    "        return attended_latent, attended_token\n",
+    "\n",
+    "    def inference(\n",
+    "            self,\n",
+    "            latent: torch.Tensor,\n",
+    "            tokens: torch.Tensor,\n",
+    "            max_len: int,\n",
+    "            end_at: list) -> list:\n",
+    "        tokens = self.embedding(tokens)\n",
+    "        for token in tokens:\n",
+    "            att_latent, att_token = self.encode_token(latent, token)\n",
+    "            latent = self.layer_norm(latent + att_token)\n",
+    "        output = []\n",
+    "        while len(output) < max_len:\n",
+    "            prediction_distribution = torch.softmax(self.decoder(latent), dim=-0)\n",
+    "            prediction = prediction_distribution.argmax()\n",
+    "            letter = tokenizer.reverse_vocabulary_dictionary[prediction.item()]\n",
+    "            print(f\"{letter}\", end=\"\")\n",
+    "            output.append(letter)\n",
+    "            if letter in end_at:\n",
+    "                break\n",
+    "        return output\n",
+    "\n",
+    "    def forward(self, latent: torch.Tensor, tokens: torch.Tensor) -> torch.Tensor:\n",
+    "        tokens = self.embedding(tokens)\n",
+    "        for token in tokens:\n",
+    "            att_latent, att_token = self.encode_token(latent, token)\n",
+    "            latent = self.layer_norm(latent + att_token)\n",
+    "        return self.decoder(latent)"
+   ],
+   "id": "f718b8527b4b102b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "vocab = \"abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ,.<>/?;:'[]{}1234567890!@#$%^&*()`~-_=+\"\n",
+    "special_tokens = [\"<model>\", \"</model>\", \"<system>\", \"</system>\", \"<user>\", \"</user>\", '\"', \"\\\\\", \"\\n\"]\n",
+    "\n",
+    "LATENT_SIZE = 64\n",
+    "ATTENTION_DEPTH = 4\n",
+    "NUM_HEADS = 8\n",
+    "\n",
+    "tokenizer = Tokenizer(\n",
+    "    vocabulary=vocab,\n",
+    "    special_tokens=special_tokens\n",
+    ")\n",
+    "\n",
+    "model = Model(\n",
+    "    vocabulary_length=len(tokenizer.vocabulary_dictionary),\n",
+    "    latent_size=LATENT_SIZE,\n",
+    "    attention_depth=ATTENTION_DEPTH,\n",
+    "    num_heads=NUM_HEADS\n",
+    ")"
+   ],
+   "id": "3323f1df3ea2f3a5",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "strings = [\n",
+    "    \"The quick brown fox jumps over the lazy dog.\",\n",
+    "    \"She sells seashells by the seashore.\",\n",
+    "    \"I love eating pizza on a rainy day.\",\n",
+    "    \"Artificial intelligence is transforming the world.\",\n",
+    "    \"The cat sat on the mat and purred softly.\",\n",
+    "    \"Learning to code can be both fun and challenging.\",\n",
+    "    \"He runs faster than anyone in his class.\",\n",
+    "    \"A beautiful sunrise can brighten any mood.\",\n",
+    "    \"The library is a quiet place for reading and studying.\",\n",
+    "    \"Music has the power to connect people from all walks of life.\"\n",
+    "]\n",
+    "training_texts = []\n",
+    "for index, string in enumerate(strings):\n",
+    "    tensor_text = tokenizer.tokenize(string, pad_before=[\"<model>\"], pad_after=[\"</model>\"])\n",
+    "    training_texts.append(tensor_text)"
+   ],
+   "id": "2e8b4a7316c988ef",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 64\n",
+    "LEARNING_RATE = 0.001\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "\n",
+    "epoch_losses = []\n",
+    "text_losses = []\n",
+    "\n",
+    "for epoch in range(EPOCHS):\n",
+    "    model.train()\n",
+    "    optimizer.zero_grad()\n",
+    "    epoch_loss = 0\n",
+    "    for text in training_texts:\n",
+    "        latent_space = torch.zeros(LATENT_SIZE)\n",
+    "        raw_logits = model(latent=latent_space, tokens=text[:-1])\n",
+    "        loss = loss_fn(raw_logits, text[-1])\n",
+    "        loss.backward()\n",
+    "        text_losses.append(loss.item())\n",
+    "        epoch_loss += loss.item()\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "    epoch_loss /= len(training_texts)\n",
+    "    epoch_losses.append(epoch_loss)\n",
+    "    print(f\"E {epoch + 1:,} - {((epoch + 1) / EPOCHS) * 100}% | Loss: {epoch_loss:,}\")"
+   ],
+   "id": "f564898c83652dcb",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "axes[0].plot(epoch_losses, label=\"Epoch Loss\")\n",
+    "axes[0].set_xlabel(\"Epochs\")\n",
+    "axes[0].set_ylabel(\"Loss\")\n",
+    "axes[0].set_title(\"Epoch Losses\")\n",
+    "axes[0].legend()\n",
+    "axes[0].grid(True)\n",
+    "\n",
+    "axes[1].plot(text_losses, label=\"Text Loss\", color='orange')\n",
+    "axes[1].set_xlabel(\"Text Number\")\n",
+    "axes[1].set_ylabel(\"Loss\")\n",
+    "axes[1].set_title(\"Text Losses\")\n",
+    "axes[1].legend()\n",
+    "axes[1].grid(True)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "id": "536cd550587370b0",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "test_text = tokenizer.tokenize(\"The\")\n",
+    "test_latent = torch.zeros(64)\n",
+    "test_inference = model.inference(\n",
+    "    latent=test_latent,\n",
+    "    tokens=test_text,\n",
+    "    max_len=100,\n",
+    "    end_at=[\"</model>\"]\n",
+    ")"
+   ],
+   "id": "31eceffbd3d0867b",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
